plugin/testData/annotator/perl/unreachableCode/givenWhenBreak.code
sub test(){
  my $var = 'test';
  given($var){
      say 'before';
      when('test'){
          say 'first';
          break;
          say '<error descr="Unreachable code">first2</error>';
      }
      say 'after';
  }
  say 'end';
}